changes in app window layout and executing files calibraiotn

--- a/OpenCVCameraCalibrationSample/OpenCVCameraCalibrationSample.rc
+++ b/OpenCVCameraCalibrationSample/OpenCVCameraCalibrationSample.rc
@@ -72,63 +72,54 @@ IDR_MAINFRAME           ICON                    "res\\OpenCVCameraCalibrationSam
 IDD_OPENCVCAMERACALIBRATIONSAMPLE_DIALOG DIALOGEX 0, 0, 419, 346
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
-CAPTION "OpenCV JAY Calibration"
+CAPTION "Erosion with adaptative structuring element (openCV + openCL)"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Camera ID",IDC_STATIC,7,3,312,52
-    LTEXT           "Static",IDC_CAMERAID,14,14,298,35,0,WS_EX_CLIENTEDGE
-    GROUPBOX        "Camera Settings",IDC_STATIC,7,59,222,58,BS_FLAT
+    GROUPBOX        "Camera ID",IDC_STATIC,7,3,278,52
+    LTEXT           "Static",IDC_CAMERAID,14,14,259,35,WS_DISABLED,WS_EX_CLIENTEDGE
+    GROUPBOX        "Camera Settings",IDC_STATIC,7,59,179,58,BS_FLAT
     CTEXT           "Width",IDC_LBL_WIDTH,18,71,24,11
-    CONTROL         "",IDC_SLIDER_WIDTH,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,43,71,140,12
-    CTEXT           "Static",IDC_WIDTH,185,69,34,12,0,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_SLIDER_WIDTH,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_DISABLED | WS_TABSTOP,43,71,103,12
+    CTEXT           "Static",IDC_WIDTH,149,69,34,12,WS_DISABLED,WS_EX_CLIENTEDGE
     CTEXT           "Height",IDC_LBL_HEIGHT,18,85,24,11
-    CONTROL         "",IDC_SLIDER_HEIGHT,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,43,84,140,12
-    CTEXT           "Static",IDC_HEIGHT,185,83,34,12,0,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_SLIDER_HEIGHT,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_DISABLED | WS_TABSTOP,43,84,103,12
+    CTEXT           "Static",IDC_HEIGHT,149,83,34,12,WS_DISABLED,WS_EX_CLIENTEDGE
     CTEXT           "Gain",IDC_LBL_GAIN,18,98,24,11
-    CONTROL         "",IDC_SLIDER_GAIN,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,43,98,140,12
-    CTEXT           "Static",IDC_GAIN,185,97,34,12,0,WS_EX_CLIENTEDGE
-    GROUPBOX        "Calibration results",IDC_STATIC,7,210,312,114
-    LTEXT           "Optical center X:",IDC_STATIC,12,220,54,8
-    EDITTEXT        IDC_OPTICAL_CENTER_X_EDIT,78,217,50,14,ES_AUTOHSCROLL | ES_READONLY,WS_EX_RIGHT
-    LTEXT           "Optical center Y:",IDC_STATIC,12,237,54,8
-    EDITTEXT        IDC_OPTICAL_CENTER_Y_EDIT,78,234,50,14,ES_AUTOHSCROLL | ES_READONLY,WS_EX_RIGHT
-    LTEXT           "Focal length X:",IDC_STATIC,12,254,48,8
-    EDITTEXT        IDC_FOCAL_LENGTH_X_EDIT,78,251,50,14,ES_AUTOHSCROLL | ES_READONLY,WS_EX_RIGHT
-    LTEXT           "Focal length Y:",IDC_STATIC,12,271,48,8
-    EDITTEXT        IDC_FOCAL_LENGTH_Y_EDIT,78,268,50,14,ES_AUTOHSCROLL | ES_READONLY,WS_EX_RIGHT
-    LTEXT           "Radial distortion coefficient k1:",IDC_STATIC,141,220,100,8
-    EDITTEXT        IDC_K1_EDIT,265,217,50,14,ES_AUTOHSCROLL | ES_READONLY,WS_EX_RIGHT
-    LTEXT           "Radial distortion coefficient k2:",IDC_STATIC,141,237,100,8
-    EDITTEXT        IDC_K2_EDIT,265,234,50,14,ES_AUTOHSCROLL | ES_READONLY,WS_EX_RIGHT
-    LTEXT           "Radial distortion coefficient k3:",IDC_STATIC,141,254,100,8
-    EDITTEXT        IDC_K3_EDIT,265,251,50,14,ES_AUTOHSCROLL | ES_READONLY,WS_EX_RIGHT
-    LTEXT           "Tangential distortion coefficient p1:",IDC_STATIC,141,271,114,8
-    EDITTEXT        IDC_P1_EDIT,265,268,50,14,ES_AUTOHSCROLL | ES_READONLY,WS_EX_RIGHT
-    LTEXT           "Tangential distortion coefficient p2:",IDC_STATIC,141,288,114,8
-    EDITTEXT        IDC_P2_EDIT,265,285,50,14,ES_AUTOHSCROLL | ES_READONLY,WS_EX_RIGHT
-    PUSHBUTTON      "Re-calibrate",IDC_CALIBRATE_BUTTON,11,290,117,30
-    PUSHBUTTON      "Save Settings",IDC_SAVE_SETTINGS_BUTTON,141,303,80,17
-    PUSHBUTTON      "Save Images",IDC_SAVE_IMAGE_BUTTON,236,303,80,17
-    GROUPBOX        "Acquisition",IDC_STATIC,233,59,86,63
-    PUSHBUTTON      "Start",IDC_START,251,86,50,16
-    PUSHBUTTON      "Stop",IDC_STOP,251,103,50,16
-    PUSHBUTTON      "Exit",IDCANCEL,139,327,50,16
-    GROUPBOX        "Calibration procedure",IDC_STATIC,7,119,312,89
-    LTEXT           "Static",IDC_CALIB_PROCEDURE_STATIC,11,127,305,52
-    GROUPBOX        "Calibration settings",IDC_STATIC,12,179,303,25
-    EDITTEXT        IDC_CHESS_ROWS_EDIT,78,187,40,14,ES_RIGHT | ES_AUTOHSCROLL | ES_READONLY
-    CONTROL         "",IDC_CHESS_ROWS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,105,187,11,14
-    EDITTEXT        IDC_CHESS_COLS_EDIT,196,187,40,14,ES_RIGHT | ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_IMAGE_COUNT_EDIT,272,187,40,14,ES_RIGHT | ES_AUTOHSCROLL | ES_READONLY
-    CONTROL         "",IDC_IMAGE_COUNT_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,299,188,11,14
-    LTEXT           "Chess board rows:",IDC_STATIC,16,190,61,8
-    LTEXT           "Chess board columns:",IDC_STATIC,123,190,71,8
-    LTEXT           "Images:",IDC_STATIC,244,190,27,8
-    CONTROL         "",IDC_CHESS_COLS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,224,187,11,14
-    PUSHBUTTON      "Files Calibration",IDC_FILESCALIB,328,8,79,26
-    PUSHBUTTON      "PREstart",PRESTART_BTN,251,68,50,17
-    PUSHBUTTON      "Stream",StreamButton,328,39,80,24
-    PUSHBUTTON      "OpenCL",OCLBTN,329,67,80,24
+    CONTROL         "",IDC_SLIDER_GAIN,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_DISABLED | WS_TABSTOP,43,98,102,12
+    CTEXT           "Static",IDC_GAIN,149,97,34,12,WS_DISABLED,WS_EX_CLIENTEDGE
+    GROUPBOX        "Calibration results",IDC_STATIC,7,166,279,114
+    LTEXT           "Optical center X:",IDC_STATIC,12,177,54,8
+    EDITTEXT        IDC_OPTICAL_CENTER_X_EDIT,66,174,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
+    LTEXT           "Optical center Y:",IDC_STATIC,12,194,54,8
+    EDITTEXT        IDC_OPTICAL_CENTER_Y_EDIT,66,191,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
+    LTEXT           "Focal length X:",IDC_STATIC,12,211,48,8
+    EDITTEXT        IDC_FOCAL_LENGTH_X_EDIT,66,208,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
+    LTEXT           "Focal length Y:",IDC_STATIC,12,228,48,8
+    EDITTEXT        IDC_FOCAL_LENGTH_Y_EDIT,66,225,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
+    LTEXT           "Radial distortion coefficient k1:",IDC_STATIC,118,177,100,8
+    EDITTEXT        IDC_K1_EDIT,233,174,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
+    LTEXT           "Radial distortion coefficient k2:",IDC_STATIC,118,194,100,8
+    EDITTEXT        IDC_K2_EDIT,233,191,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
+    LTEXT           "Radial distortion coefficient k3:",IDC_STATIC,118,211,100,8
+    EDITTEXT        IDC_K3_EDIT,233,208,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
+    LTEXT           "Tangential distortion coefficient p1:",IDC_STATIC,118,228,114,8
+    EDITTEXT        IDC_P1_EDIT,233,225,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
+    LTEXT           "Tangential distortion coefficient p2:",IDC_STATIC,118,245,114,8
+    EDITTEXT        IDC_P2_EDIT,233,242,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
+    PUSHBUTTON      "Re-calibrate",IDC_CALIBRATE_BUTTON,11,261,106,16,WS_DISABLED
+    PUSHBUTTON      "Save Settings",IDC_SAVE_SETTINGS_BUTTON,120,260,80,17,WS_DISABLED
+    PUSHBUTTON      "Save Images",IDC_SAVE_IMAGE_BUTTON,202,260,80,17,WS_DISABLED
+    PUSHBUTTON      "Start stream with erosion",IDC_START,294,111,115,39,BS_MULTILINE
+    PUSHBUTTON      "Stop",IDC_STOP,295,153,114,35
+    PUSHBUTTON      "Exit",IDCANCEL,54,296,295,45
+    GROUPBOX        "Calibration procedure",IDC_STATIC,7,119,279,48
+    LTEXT           "Static",IDC_CALIB_PROCEDURE_STATIC,11,127,245,32
+    PUSHBUTTON      "Files Calibration",IDC_FILESCALIB,292,28,117,34
+    PUSHBUTTON      "Prepare Camera",PRESTART_BTN,293,69,116,37,WS_DISABLED
+    PUSHBUTTON      "Stream",StreamButton,296,242,113,24,WS_DISABLED
+    PUSHBUTTON      "OCL IMG TEST",OCLBTN,295,213,114,26
+    GROUPBOX        "Acquision",IDC_STATIC,199,59,86,63
+    LTEXT           "Use buttons:",IDC_STATIC,329,12,42,8
 END
 
 
@@ -181,7 +172,7 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_OPENCVCAMERACALIBRATIONSAMPLE_DIALOG, DIALOG
     BEGIN
-        RIGHTMARGIN, 326
+        RIGHTMARGIN, 409
         BOTTOMMARGIN, 341
     END
 END
