almost everything working

--- a/OpenCVCameraCalibrationSample/OpenCVCameraCalibrationSample.rc
+++ b/OpenCVCameraCalibrationSample/OpenCVCameraCalibrationSample.rc
@@ -118,7 +118,7 @@ BEGIN
     PUSHBUTTON      "Files Calibration",IDC_FILESCALIB,374,28,117,34
     PUSHBUTTON      "Prepare Camera",PRESTART_BTN,375,69,116,37,WS_DISABLED
     PUSHBUTTON      "Stream",StreamButton,378,242,113,24,WS_DISABLED
-    PUSHBUTTON      "OCL IMG TEST",OCLBTN,377,213,114,26
+    PUSHBUTTON      "OCL IMG TEST",OCLBTN,377,213,114,26,WS_DISABLED
     GROUPBOX        "Acquision",IDC_STATIC,199,59,86,63
     LTEXT           "Use buttons:",IDC_STATIC,374,12,42,8
 END
