--- a/OpenCVCameraCalibrationSample/OpenCVCameraCalibrationSample.vcxproj.filters
+++ b/OpenCVCameraCalibrationSample/OpenCVCameraCalibrationSample.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="ocltest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\OpenCVCameraCalibrationSample.ico">
