--- a/OpenCVCameraCalibrationSample/OpenCVCameraCalibrationSample.rc
+++ b/OpenCVCameraCalibrationSample/OpenCVCameraCalibrationSample.rc
@@ -76,51 +76,29 @@ CAPTION
 "Wieloprocesorowe Systemy Wizyjne - Erosion with adaptative structuring element (openCV + openCL)"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Camera ID",IDC_STATIC,7,3,278,52
-    LTEXT           "Static",IDC_CAMERAID,14,14,259,35,WS_DISABLED,WS_EX_CLIENTEDGE
-    GROUPBOX        "Camera Settings",IDC_STATIC,7,59,179,58,BS_FLAT
-    CTEXT           "Width",IDC_LBL_WIDTH,18,71,24,11
-    CONTROL         "",IDC_SLIDER_WIDTH,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_DISABLED | WS_TABSTOP,43,71,103,12
-    CTEXT           "Static",IDC_WIDTH,149,69,34,12,WS_DISABLED,WS_EX_CLIENTEDGE
-    CTEXT           "Height",IDC_LBL_HEIGHT,18,85,24,11
-    CONTROL         "",IDC_SLIDER_HEIGHT,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_DISABLED | WS_TABSTOP,43,84,103,12
-    CTEXT           "Static",IDC_HEIGHT,149,83,34,12,WS_DISABLED,WS_EX_CLIENTEDGE
-    CTEXT           "Gain",IDC_LBL_GAIN,18,98,24,11
-    CONTROL         "",IDC_SLIDER_GAIN,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_DISABLED | WS_TABSTOP,43,98,102,12
-    CTEXT           "Static",IDC_GAIN,149,97,34,12,WS_DISABLED,WS_EX_CLIENTEDGE
-    GROUPBOX        "Calibration results",IDC_STATIC,7,166,279,114
-    LTEXT           "Optical center X:",IDC_STATIC,12,177,54,8
-    EDITTEXT        IDC_OPTICAL_CENTER_X_EDIT,66,174,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
-    LTEXT           "Optical center Y:",IDC_STATIC,12,194,54,8
-    EDITTEXT        IDC_OPTICAL_CENTER_Y_EDIT,66,191,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
-    LTEXT           "Focal length X:",IDC_STATIC,12,211,48,8
-    EDITTEXT        IDC_FOCAL_LENGTH_X_EDIT,66,208,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
-    LTEXT           "Focal length Y:",IDC_STATIC,12,228,48,8
-    EDITTEXT        IDC_FOCAL_LENGTH_Y_EDIT,66,225,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
-    LTEXT           "Radial distortion coefficient k1:",IDC_STATIC,118,177,100,8
-    EDITTEXT        IDC_K1_EDIT,233,174,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
-    LTEXT           "Radial distortion coefficient k2:",IDC_STATIC,118,194,100,8
-    EDITTEXT        IDC_K2_EDIT,233,191,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
-    LTEXT           "Radial distortion coefficient k3:",IDC_STATIC,118,211,100,8
-    EDITTEXT        IDC_K3_EDIT,233,208,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
-    LTEXT           "Tangential distortion coefficient p1:",IDC_STATIC,118,228,114,8
-    EDITTEXT        IDC_P1_EDIT,233,225,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
-    LTEXT           "Tangential distortion coefficient p2:",IDC_STATIC,118,245,114,8
-    EDITTEXT        IDC_P2_EDIT,233,242,50,14,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED,WS_EX_RIGHT
-    PUSHBUTTON      "Re-calibrate",IDC_CALIBRATE_BUTTON,11,261,106,16,WS_DISABLED
-    PUSHBUTTON      "Save Settings",IDC_SAVE_SETTINGS_BUTTON,120,260,80,17,WS_DISABLED
-    PUSHBUTTON      "Save Images",IDC_SAVE_IMAGE_BUTTON,202,260,80,17,WS_DISABLED
-    PUSHBUTTON      "Start stream with erosion",IDC_START,376,111,115,39,BS_MULTILINE
-    PUSHBUTTON      "Stop",IDC_STOP,377,153,114,35
-    PUSHBUTTON      "Exit",IDCANCEL,54,296,295,45
-    GROUPBOX        "Calibration procedure",IDC_STATIC,7,119,279,48
-    LTEXT           "Static",IDC_CALIB_PROCEDURE_STATIC,11,127,245,32
-    PUSHBUTTON      "Files Calibration",IDC_FILESCALIB,374,28,117,34
-    PUSHBUTTON      "Prepare Camera",PRESTART_BTN,375,69,116,37,WS_DISABLED
-    PUSHBUTTON      "Stream",StreamButton,378,242,113,24,WS_DISABLED
-    PUSHBUTTON      "OCL IMG TEST",OCLBTN,377,213,114,26,WS_DISABLED
-    GROUPBOX        "Acquision",IDC_STATIC,199,59,86,63
-    LTEXT           "Use buttons:",IDC_STATIC,374,12,42,8
+    GROUPBOX        "Camera ID",IDC_STATIC,8,53,278,52
+    LTEXT           "Static",IDC_CAMERAID,15,64,259,35,WS_DISABLED,WS_EX_CLIENTEDGE
+    GROUPBOX        "Camera Settings",IDC_STATIC,8,109,179,58,BS_FLAT
+    CTEXT           "Width",IDC_LBL_WIDTH,19,121,24,11
+    CTEXT           "Static",IDC_WIDTH,150,119,34,12,WS_DISABLED,WS_EX_CLIENTEDGE
+    CTEXT           "Height",IDC_LBL_HEIGHT,19,135,24,11
+    CTEXT           "Static",IDC_HEIGHT,150,133,34,12,WS_DISABLED,WS_EX_CLIENTEDGE
+    CTEXT           "Gain",IDC_LBL_GAIN,19,148,24,11
+    CTEXT           "Static",IDC_GAIN,150,147,34,12,WS_DISABLED,WS_EX_CLIENTEDGE
+    PUSHBUTTON      "Start stream with erosion",IDC_START,378,134,114,39,BS_MULTILINE
+    PUSHBUTTON      "Stop",IDC_STOP,378,177,114,35
+    PUSHBUTTON      "Exit",IDCANCEL,8,276,486,45
+    GROUPBOX        "Calibration procedure",IDC_STATIC,8,169,279,93
+    LTEXT           "Static",IDC_CALIB_PROCEDURE_STATIC,12,177,245,79
+    PUSHBUTTON      "Files Calibration",IDC_FILESCALIB,378,52,114,34
+    PUSHBUTTON      "Prepare Camera",PRESTART_BTN,378,92,114,37,WS_DISABLED
+    PUSHBUTTON      "OCL IMG TEST",OCLBTN,377,231,114,33,WS_DISABLED
+    GROUPBOX        "Acquision",IDC_STATIC,201,109,86,56
+    LTEXT           "CONTROL BUTTONS:",IDC_STATIC,345,14,68,8
+    LTEXT           "Camera information:",IDC_STATIC,12,12,66,8
+    CONTROL         "",IDC_SLIDER_GAIN,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_DISABLED | WS_TABSTOP,44,148,102,12
+    CONTROL         "",IDC_SLIDER_HEIGHT,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_DISABLED | WS_TABSTOP,44,134,103,12
+    CONTROL         "",IDC_SLIDER_WIDTH,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_DISABLED | WS_TABSTOP,44,121,103,12
 END
 
 
