--- a/OpenCVCameraCalibrationSample/OpenCVCameraCalibrationSample.vcxproj.filters
+++ b/OpenCVCameraCalibrationSample/OpenCVCameraCalibrationSample.vcxproj.filters
@@ -34,10 +34,7 @@
     <ClCompile Include="Element.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ocltest2.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="structural_element.cpp">
+    <ClCompile Include="ocltest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -81,8 +78,5 @@
     <None Include="res\OpenCVCameraCalibrationSample.rc2">
       <Filter>Resource Files</Filter>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="ReadMe.txt" />
   </ItemGroup>
 </Project>
